--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
     <title>Discord Layout</title>
 </head>
 <body>
-    
+    <header>
+        <div class="container-flex">
+            <div class="headeritem">Logo</div>
+            <nav class="headeritem">
+                <a href="#">Link</a>
+                <a href="#">Link</a>
+                <a href="#">Link</a>
+                <a href="#">Link</a>
+                <a href="#">Link</a>
+            </nav>
+            <div class="headeritem">Login</div>
+        </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
