--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div class="container-flex">
+        <div class="headercontainer container-flex">
             <div class="headeritem">Logo</div>
             <nav class="headeritem">
                 <a href="#">Link</a>
@@ -22,7 +22,11 @@
         </div>
     </header>
     <main>
-
+        <div class="jumbo container-flex">
+            <div class="bigbanner">
+            </div>
+        </div>
+        
     </main>
     <footer>
 
