first section added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
             <div class="bigbanner">
             </div>
         </div>
-        
+        <div class="sectionwhite container-flex">
+            <div class="columnlarge">
+            </div>
+            <div class="columnsmall">
+            </div>
+        </div>
     </main>
     <footer>
 
