add sections before footer

--- a/index.html
+++ b/index.html
@@ -23,13 +23,29 @@
     </header>
     <main>
         <div class="jumbo container-flex">
-            <div class="bigbanner">
+            <div class="banner">
             </div>
         </div>
         <div class="sectionwhite container-flex">
             <div class="columnlarge">
             </div>
             <div class="columnsmall">
+            </div>
+        </div>
+        <div class="sectiongrey container-flex">
+            <div class="columnsmall">
+            </div>
+            <div class="columnlarge">
+            </div>
+        </div>
+        <div class="sectionwhite container-flex">
+            <div class="columnlarge">
+            </div>
+            <div class="columnsmall">
+            </div>
+        </div>
+        <div class="bigsection container-flex">
+            <div class="bigbanner">
             </div>
         </div>
     </main>
