--- a/index.html
+++ b/index.html
@@ -50,7 +50,21 @@
         </div>
     </main>
     <footer>
-
+        <div class="footercontainer container-flex">
+            <div class="leftbanner"></div>
+            <div class="rightbanner container-flex">
+                <div class="listitem"></div>
+                <div class="listitem"></div>
+                <div class="listitem"></div>
+                <div class="listitem"></div>
+            </div>
+        </div>
+        <div class="lastfooter container-flex">
+            <div class="footernav container-flex-footer">
+                <div class="footerelement">Logo</div>
+                <div class="footerelement">Bottone</div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
